--- a/snippets/gradle_complex/build.gradle
+++ b/snippets/gradle_complex/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '2.3.4.RELEASE'
 }
 
 group 'pl.sdacademy.majbaum.spring'
