--- a/spring-data/src/main/resources/application.properties
+++ b/spring-data/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.username=h2
 spring.datasource.password=h2
 spring.datasource.url=jdbc:h2:~/testdb;DB_CLOSE_ON_EXIT=FALSE
 spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
