--- a/spring-security/src/main/resources/application.properties
+++ b/spring-security/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.username=h2
+spring.datasource.password=h2
+spring.datasource.url=jdbc:h2:~/securitydb;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.hibernate.ddl-auto=update
+
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
