--- a/spring-security/src/main/resources/application.properties
+++ b/spring-security/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+spring.security.user.password=cosik
