--- a/foo/foo-app/src/main/resources/application.properties
+++ b/foo/foo-app/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.username=foo
+spring.datasource.password=foo
+spring.datasource.url=jdbc:postgresql://localhost:6666/foo
+spring.jpa.hibernate.ddl-auto=validate
 
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
